[package]
name = "async_test_panic"
version = "0.1.0"
authors = ["Darwin D Wu <wuddarwin@gmail.com>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "asynctest"
path = "src/lib.rs"
doctest = false
crate-type = ["lib"]

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
actix-web = "3"
actix-rt = "*"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "serde_json"] }
r2d2 = "*"
diesel_migrations = "1.4"
lazy_static = "*"
futures = "*"
serde = "*"
serde_json = "*"
dotenv = "*"
